methodology & librec-auto drafts v0.1

--- a/chapter1-intro.tex
+++ b/chapter1-intro.tex
@@ -115,6 +115,8 @@ For example, Kiva is a non-profit organization that operates a crowd-sourced mic
 Several provider-side fairness concerns might arise in this recommendation context.\footnote{Consumer-side fairness has not arisen so far as a concern in this application.} One key concern, arising from Kiva's mission of supporting world-wide access to capital, is that the geographic imbalances in users' preferences may manifest themselves in the disproportionate representation of certain countries or regions in recommendation lists. This could give rise to a positive feedback loop, as the recommended items are more likely to be supported, and thus the lending becomes even more highly concentrated. A similar kind of imbalance may arise with respect to different industries or economic sectors. Thus, we can identify at least two fairness concerns within this recommender system: equity in geographic distribution of capital \cite{liu2019personalized}, and equity across economic sectors \cite{Sonboli202Oofair}.
 
 
+\todo{summary of contributions and research questions}
+
 %incomplete.. question and brief solution and the problems that it follows
 The research questions that we seek to answer are as follows:
 
